--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-  
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Example</title>
-    </head>
-    <body>
-        <p>olá abestado!</p>
-    </body>
+
+<head>
+    <title>Minha Página</title>
+</head>
+
+<body>
+    <p>olá abestado!</p>
+</body>
+
 </html>
