--- a/index.html
+++ b/index.html
@@ -1,162 +1,90 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <title>MARVEL</title>
+    <link rel="stylesheet" type="text/css" href="beleza.css">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="beauty.css">
-    <title>Animes :3</title>
-    <style>
-        .navbar-brand {
-            background-color: #555555;
-            border-radius: 10px;
-        }
-    </style>
+
+
 </head>
 
 <body>
-    <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="home.html"><img src="IMAGEMTRABAI/logo.png" height="80px" alt="TATAKAE" width="90px"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="home.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="sobre.html">Sobre</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Categorias
-                        </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="shounen.html">Shounen</a></li>
-                                <li><a class="dropdown-item" href="shoujo.html">Shoujo</a></li>
-                                <li><a class="dropdown-item" href="mecha.html">Mecha</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
-                        </li>
+
+    <header>
+        <div class="container">
+            <div id="logo">
+                <img title="marvel-logo" alt="error" src="images/marvel-logo.png" width="200px">
+            </div>
+
+            <ul class="menu">
+                <li><a href="site.html">HOME</a></li>
+                <li><a href="#">PERSONAGENS</a>
+                    <ul>
+                        <li><a href="miranha.html">HOMEM-ARANHA</a></li>
+                        <li><a href="demolidor.html">DEMOLIDOR</a></li>
                     </ul>
-                </div>
-            </div>
-        </nav> <br>
-
-        <center>
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="IMAGEMTRABAI/legiao_Km5uJiPD2Ino.png.jpeg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="IMAGEMTRABAI/eren.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="IMAGEMTRABAI/mecha-animes-capa.jpg" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                        </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                        </button>
-
-            </div>
-        </center> <br><br>
-        <center>
-            <div id="conteudo1">
-
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                            <div class="carousel-indicators">
-                                <button type="button " data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                                <button type="button " data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                            </div>
-                            <div class="carousel-inner">
-                                <div class="carousel-item active" data-bs-interval="10000">
-                                    <img src="IMAGEMTRABAI/chika.jpg" class="d-block w-100 " alt="YO">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <h5>Kaguya Sama</h5>
-                                        <p>Shoujo</p>
-                                    </div>
-                                </div>
-                                <div class="carousel-item" data-bs-interval="2000">
-                                    <img src="IMAGEMTRABAI/Ao-Haru-Ride-OVA.jpg" class="d-block w-100" alt="...">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <h5>Ao Haru Hide</h5>
-                                        <p>Shoujo</p>
-                                    </div>
-                                </div>
-
-                            </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                                </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                                </button>
-                        </div>
+                </li>
+                <li><a href="dv.html">DESENVOLVEDORES</a></li>
+            </ul>
+        </div>
+    </header>
+    <br>
 
 
-                    </div>
-                    <div class="col-lg-6">
-                        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                            <div class="carousel-indicators">
-                                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                            </div>
-                            <div class="carousel-inner">
-                                <div class="carousel-item active" data-bs-interval="10000">
-                                    <img src="IMAGEMTRABAI/narutinho.jpg" class="d-block w-100" alt="...">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <h5>Naruto</h5>
-                                        <p>Shounen</p>
-                                    </div>
-                                </div>
-                                <div class="carousel-item" data-bs-interval="2000">
-                                    <img src="IMAGEMTRABAI/bnh.jpg" class="d-block w-100" alt="...">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <h5>Boku no Hero</h5>
-                                        <p>Shounen</p>
-                                    </div>
-                                </div>
 
-                            </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                                </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                                </button>
-                        </div>
-                    </div>
-                </div> <br><br>
-            </div>
-        </center>
+    </b>
+    <div id="principal">
+        <div class="container">
+            <h1>História da Marvel</h1>
+            <p>Fundada em em 1939, inicialmente como Timely Comics e em seguida Atlas Comics, nos Estados Unidos por Martin Goodman, a Marvel Entertainment se tornou a maior franquia cinematográfica e uma das maiores produtoras de HQs. Nos anos 40 foi lançada
+                a revista Marvel Comics pela Editora Timely, que trazia a história do andróide Tocha Human e Namor, um príncipe subaquatíco que odiava humanos. Em seguida nasceram outros super-heróis como o maravilhoso Capitão América. O que chama a atenção
+                dos fãs é o fato de que a Marvel Comics costuma misturar a realidade com a ficção. Utiliza cenários conhecidos como a cidade de Nova Iorque e Califórnia.</p>
+            <ul>
+                <li>Anos 40 - Lançamento do Selo Marvel Comics</li>
+                <li>Anos 50 - Vendas da Revista caem</li>
+                <li>Anos 60 - Estreia da HQ do Quarteto Fantástico</li>
+                <li>Anos 70 - Estreia do Justiceiro e dos X-Men</li>
+                <li>Anos 80 - Graphic Novels</li>
+                <li>Anos 2000 - Iniciam no universo cinematográfico</li>
+                <li>2010+ - 18 filmes lançados, tornou-se maior bilheteria e a maior franquia de filmes</li>
+            </ul>
+
+            <p>
+                Anos se passaram e a Marvel começou a enfrentar problemas com a queda das vendas. Nos anos 90 personagens começaram a ganhar licença para entrar no mundo cinematorgráfico e foram lançados filmes como X-men, Homem Aranha e Quarteto Fantátisco.
+
+            </p>
+            <p>
+                Walt Disney Company comprou a Marvel no ano de 2009 e se tornou uma das maiores bilheterias da história do cinema. Atualmente, com mais de 8 mil personagens, a Marvel é uma das maiores empresas de entretenimento.
+                <table border="1">
+                    <tr>
+                        <th colspan="2">
+                            HQs mais vendidas da Marvel Comics em 2020
+                        </th>
+                    </tr>
+                    <tr>
+                        <td>Thor #1</td>
+                        <td>Star Wars #1</td>
+                    </tr>
+                    <tr>
+                        <td>X-Men #4</td>
+                        <td>X-Men #5</td>
+                    </tr>
+                    <tr>
+                        <td>Guardiões da Galáxia #1</td>
+                        <td>O Espetacular Homem-Aranha #38</td>
+                    </tr>
+                    <tr>
+                        <td>O Espetacular Homem-Aranha #37</td>
+                        <td>Estrela #1</td>
+                    </tr>
+                </table>
+
+            </p>
+        </div>
     </div>
-
-
+    <footer>Desenvolvido por Klyf (O lindo) e Damdam.</footer>
 </body>
 
 </html>
