--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>MARVEL</title>
+    <title>MARVEL :3</title>
     <link rel="stylesheet" type="text/css" href="beleza.css">
 
 
