--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
 
             <ul class="menu">
-                <li><a href="site.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="#">PERSONAGENS</a>
                     <ul>
                         <li><a href="miranha.html">HOMEM-ARANHA</a></li>
